--- a/index.html
+++ b/index.html
@@ -1,7 +1,59 @@
 <!DOCTYPE html>
+<!-- Erez is going to do the Navbar  -->
+<!-- cesar does  -->
 <html>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>    
 <body>
-
-
+<nav>
+    <button class="dropbtn">
+        <hr class="line one" style="width:30px;">
+        <hr class="line" style="width:30px;">
+        <hr class="line" style="width:30px;">
+      </button>
+      <P><img src="logo.png" alt="Logo" width="140" height="120"><sup>NL</sup></sup></P>
+      <form>
+        <input type="text" id="search" placeholder="Search">
+        <button type="button" class="btn btn-secondary"><i class="fa fa-search"></i></button>
+      </form>
+      <img src="upload.png"  id="upload" alt="Upload" width="40" height="40">
+      <button type="button" class="btn btn-primary">Sign in</button>
+</nav>
+<div class="container home">
+</div>
 </body>
 </html>
+<style>
+    .home{
+     width:100%;
+    }
+    nav {display:flex;
+        height:50px;
+        }
+
+.line{margin-top:-12px;}
+.one{margin-top:8px;}
+
+.dropbtn{height:33px;
+         margin-top:44px;
+         margin-left:300px;
+            }
+sup{
+    margin-left:-13px;
+}
+#search{margin-left:100px;
+       margin-top:48px;
+       height:33px;
+       width:800px;
+}
+#upload{margin-left:43px;
+        margin-top:47px;
+}
+.btn-primary{margin-top:45px;
+            height:40x;
+            margin-left:65px;
+}
+
+</style>
