added embedded video

--- a/index.html
+++ b/index.html
@@ -2,58 +2,96 @@
 <!-- Erez is going to do the Navbar  -->
 <!-- cesar does  -->
 <html>
+
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">  
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+        crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css" />
+</head>
+
 <body>
-<nav>
-    <button class="dropbtn">
-        <hr class="line one" style="width:30px;">
-        <hr class="line" style="width:30px;">
-        <hr class="line" style="width:30px;">
-      </button>
-      <P><img src="logo.png" alt="Logo" width="140" height="120"><sup>NL</sup></sup></P>
-      <form>
-        <input type="text" id="search" placeholder="Search">
-        <button type="button" class="btn btn-secondary"><i class="fa fa-search"></i></button>
-      </form>
-      <img src="upload.png"  id="upload" alt="Upload" width="40" height="40">
-      <button type="button" class="btn btn-primary">Sign in</button>
-</nav>
-<div class="container home">
-</div>
+    <nav>
+        <button class="dropbtn">
+            <hr class="line one" style="width:30px;">
+            <hr class="line" style="width:30px;">
+            <hr class="line" style="width:30px;">
+        </button>
+        <P><img src="logo.png" alt="Logo" width="140" height="120"><sup>NL</sup></sup></P>
+        <form>
+            <input type="text" id="search" placeholder="Search">
+            <button type="button" class="btn btn-secondary"><i class="fa fa-search"></i></button>
+        </form>
+        <img src="upload.png" id="upload" alt="Upload" width="40" height="40">
+        <button type="button" class="btn btn-primary">Sign in</button>
+    </nav>
+    <div class="container home">
+        <div id="video-container" class="flex-col-center">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/sZRvZaeCNNg" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+
+            <div id="video-footer" class="flex-col-start">
+                <p id="video-title">Highest-scoring Premier League Matches</p>
+                <div id="video-footer-wrapper" class="flex-row-start">
+                    <a href="">
+                        <div id="video-footer-logo" class="flex-row-center">
+                            <div>T</div>
+                        </div>
+                    </a>
+                    <div class="flex-col-start">
+                        <div>The Odin Project</div>
+                        <div id="subscribe" class="flex-row-center">
+                            <button id="subscribe-btn" class="flex-row-center">
+                                <i id="youtube-icon" class="fab fa-youtube fa-2x"></i>
+                                <div>Subscribe</div>
+                            </button>
+                            <div id="counter">
+                                799
+                            </div>
+                        </div>
+                    </div>
+                    <div id="views-counter">
+                        50,016 views
+                    </div>
+                </div>
+                <hr>
+                <div id="footer-bottom" class="flex-row-space">
+                    <div id="bottom-left" class="flex-row-space">
+                        <a class="flex-row-space bottom-icons" href="">
+                            <i class="fas fa-plus fa-2x"></i>
+                            <label> Add to</label>
+                        </a>
+                        <a href="" class="flex-row-space bottom-icons">
+                            <i class="fas fa-share fa-2x"></i>
+                            <label>Share</label>
+                        </a>
+                        <a href="" class="flex-row-space bottom-icons">
+                            <i class="fas fa-ellipsis-h fa-2x"></i>
+                            <label>More</label>
+                        </a>
+                    </div>
+                    <div id="bottom-right" class="flex-row-space">
+                        <a class="flex-row-space bottom-icons" href="">
+                            <i class="fas fa-thumbs-up"></i>
+                            <label>359</label>
+                        </a>
+                        <a class="flex-row-space bottom-icons" href="">
+                            <i class="fas fa-thumbs-down"></i>
+                            <label>14</label>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
 </body>
+
 </html>
-<style>
-    .home{
-     width:100%;
-    }
-    nav {display:flex;
-        height:50px;
-        }
-
-.line{margin-top:-12px;}
-.one{margin-top:8px;}
-
-.dropbtn{height:33px;
-         margin-top:44px;
-         margin-left:300px;
-            }
-sup{
-    margin-left:-13px;
-}
-#search{margin-left:100px;
-       margin-top:48px;
-       height:33px;
-       width:800px;
-}
-#upload{margin-left:43px;
-        margin-top:47px;
-}
-.btn-primary{margin-top:45px;
-            height:40x;
-            margin-left:65px;
-}
-
-</style>
