--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@ sup{
 #upload{margin-left:43px;
         margin-top:47px;
 }
-.btn-primary{margin-top:45px;
-            height:40x;
-            margin-left:65px;
+.btn-primary{
+ margin-top:45px;
+ height:40px;
+ margin-left:40px;
 }
 
 </style>
