fixed page erros

--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
 </head>
 
 <body>
-    <nav>
-        <button class="dropbtn">
-            <hr class="line one" style="width:30px;">
-            <hr class="line" style="width:30px;">
-            <hr class="line" style="width:30px;">
-        </button>
-        <P><img src="logo.png" alt="Logo" width="140" height="120"><sup>NL</sup></sup></P>
-        <form>
-            <input type="text" id="search" placeholder="Search">
-            <button type="button" class="btn btn-secondary"><i class="fa fa-search"></i></button>
-        </form>
-        <img src="upload.png" id="upload" alt="Upload" width="40" height="40">
-        <button type="button" class="btn btn-primary">Sign in</button>
-    </nav>
     <div class="container home">
+        <nav class="container">
+            <button class="dropbtn">
+                <hr class="line one" style="width:30px;">
+                <hr class="line" style="width:30px;">
+                <hr class="line" style="width:30px;">
+            </button>
+            <P><img src="logo.png" alt="Logo" width="140" height="120"><sup>NL</sup></sup></P>
+            <form>
+                <input type="text" id="search" placeholder="Search">
+                <button type="button" class="btn btn-secondary"><i class="fa fa-search"></i></button>
+            </form>
+            <img src="upload.png" id="upload" alt="Upload" width="40" height="40">
+            <button type="button" class="btn btn-primary">Sign in</button>
+        </nav>
         <div id="video-container" class="flex-col-center">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/sZRvZaeCNNg" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -92,5 +92,4 @@
 
     </div>
 </body>
-
 </html>
