--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 </head>
 
 <body>
-    <div class="container home">
-        <nav class="container">
+    <main class="wrapper ">
+        <nav class="container-fluid row">
             <button class="dropbtn">
                 <hr class="line one" style="width:30px;">
                 <hr class="line" style="width:30px;">
                 <hr class="line" style="width:30px;">
             </button>
-            <P><img src="logo.png" alt="Logo" width="140" height="120"><sup>NL</sup></sup></P>
+            <p><img src="logo.png" alt="Logo" width="140" height="120"><sup>NL</sup></sup></p>
             <form>
                 <input type="text" id="search" placeholder="Search">
                 <button type="button" class="btn btn-secondary"><i class="fa fa-search"></i></button>
@@ -31,65 +31,201 @@
             <img src="upload.png" id="upload" alt="Upload" width="40" height="40">
             <button type="button" class="btn btn-primary">Sign in</button>
         </nav>
-        <div id="video-container" class="flex-col-center">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/sZRvZaeCNNg" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+        <div id="mid-section-container" class="flex-row-space">
+            <div id="video-container" class="flex-col-center">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/sZRvZaeCNNg" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
 
-            <div id="video-footer" class="flex-col-start">
-                <p id="video-title">Highest-scoring Premier League Matches</p>
-                <div id="video-footer-wrapper" class="flex-row-start">
-                    <a href="">
-                        <div id="video-footer-logo" class="flex-row-center">
-                            <div>T</div>
-                        </div>
-                    </a>
-                    <div class="flex-col-start">
-                        <div>The Odin Project</div>
-                        <div id="subscribe" class="flex-row-center">
-                            <button id="subscribe-btn" class="flex-row-center">
-                                <i id="youtube-icon" class="fab fa-youtube fa-2x"></i>
-                                <div>Subscribe</div>
-                            </button>
-                            <div id="counter">
-                                799
+                <div id="video-footer" class="flex-col-start">
+                    <p id="video-title">Highest-scoring Premier League Matches</p>
+                    <div id="video-footer-wrapper" class="flex-row-start">
+                        <a href="">
+                            <div id="video-footer-logo" class="flex-row-center">
+                                <div>T</div>
+                            </div>
+                        </a>
+                        <div class="flex-col-start">
+                            <div>The Odin Project</div>
+                            <div id="subscribe" class="flex-row-center">
+                                <button id="subscribe-btn" class="flex-row-center">
+                                    <i id="youtube-icon" class="fab fa-youtube fa-2x"></i>
+                                    <div>Subscribe</div>
+                                </button>
+                                <div id="counter">
+                                    799
+                                </div>
                             </div>
                         </div>
+                        <div id="views-counter">
+                            50,016 views
+                        </div>
                     </div>
-                    <div id="views-counter">
-                        50,016 views
+                    <hr>
+                    <div id="footer-bottom" class="flex-row-space">
+                        <div id="bottom-left" class="flex-row-space">
+                            <a class="flex-row-space bottom-icons" href="">
+                                <i class="fas fa-plus fa-2x"></i>
+                                <label> Add to</label>
+                            </a>
+                            <a href="" class="flex-row-space bottom-icons">
+                                <i class="fas fa-share fa-2x"></i>
+                                <label>Share</label>
+                            </a>
+                            <a href="" class="flex-row-space bottom-icons">
+                                <i class="fas fa-ellipsis-h fa-2x"></i>
+                                <label>More</label>
+                            </a>
+                        </div>
+                        <div id="bottom-right" class="flex-row-space">
+                            <a class="flex-row-space bottom-icons" href="">
+                                <i class="fas fa-thumbs-up"></i>
+                                <label>359</label>
+                            </a>
+                            <a class="flex-row-space bottom-icons" href="">
+                                <i class="fas fa-thumbs-down"></i>
+                                <label>14</label>
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <hr>
-                <div id="footer-bottom" class="flex-row-space">
-                    <div id="bottom-left" class="flex-row-space">
-                        <a class="flex-row-space bottom-icons" href="">
-                            <i class="fas fa-plus fa-2x"></i>
-                            <label> Add to</label>
-                        </a>
-                        <a href="" class="flex-row-space bottom-icons">
-                            <i class="fas fa-share fa-2x"></i>
-                            <label>Share</label>
-                        </a>
-                        <a href="" class="flex-row-space bottom-icons">
-                            <i class="fas fa-ellipsis-h fa-2x"></i>
-                            <label>More</label>
-                        </a>
+            </div>
+            <div id="sidebar" class="flex-col-start">
+                <div id="sidebar-title-container" class="flex-row-center">
+                  <div id="sidebar-title-leftside">Up next</div>
+                  <div id="sidebear-title-rightside" class="flex-row-space">
+                  <div>Autoplay</div>
+                  <i class="fas fa-info-circle"></i>
+                  <div id="toggle-button">
+                    <div id="toggle-button-symbol" class="symbol-left">&#x2713;</div>
+                    <div id="toggle-button-circle" class="circle-right"></div>
+                  </div>
+                </div>
+                </div>
+
+                <div id="thumbnail-container flex-col-center">
+                    <div id="thumbnail-wrapper" class="flex-row-space">
+                        <img id="thumbnail"
+                            src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Google_Videos_Homepage_Search_Engine_Screenshot.png">
+                        <div id="thumbnail-description" class="flex-col-start">
+                            <p class="thumb-par">Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+                            <p class="smallish">Lorem Ipsum</p>
+                            <p class="smallish">10.000 views</p>
+                        </div>
                     </div>
-                    <div id="bottom-right" class="flex-row-space">
-                        <a class="flex-row-space bottom-icons" href="">
-                            <i class="fas fa-thumbs-up"></i>
-                            <label>359</label>
-                        </a>
-                        <a class="flex-row-space bottom-icons" href="">
-                            <i class="fas fa-thumbs-down"></i>
-                            <label>14</label>
-                        </a>
+                    <div id="thumbnail-wrapper" class="flex-row-space">
+                        <img id="thumbnail"
+                            src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Google_Videos_Homepage_Search_Engine_Screenshot.png">
+                        <div id="thumbnail-description" class="flex-col-start">
+                            <p class="thumb-par">Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+                            <p class="smallish">Lorem Ipsum</p>
+                            <p class="smallish">10.000 views</p>
+                        </div>
+                    </div>
+                    <div id="thumbnail-wrapper" class="flex-row-space">
+                        <img id="thumbnail"
+                            src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Google_Videos_Homepage_Search_Engine_Screenshot.png">
+                        <div id="thumbnail-description" class="flex-col-start">
+                            <p class="thumb-par">Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+                            <p class="smallish">Lorem Ipsum</p>
+                            <p class="smallish">10.000 views</p>
+                        </div>
+                    </div>
+                    <div id="thumbnail-wrapper" class="flex-row-space">
+                        <img id="thumbnail"
+                            src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Google_Videos_Homepage_Search_Engine_Screenshot.png">
+                        <div id="thumbnail-description" class="flex-col-start">
+                            <p class="thumb-par">Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+                            <p class="smallish">Lorem Ipsum</p>
+                            <p class="smallish">10.000 views</p>
+                        </div>
+                    </div>
+                    <div id="thumbnail-wrapper" class="flex-row-space">
+                        <img id="thumbnail"
+                            src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Google_Videos_Homepage_Search_Engine_Screenshot.png">
+                        <div id="thumbnail-description" class="flex-col-start">
+                            <p class="thumb-par">Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+                            <p class="smallish">Lorem Ipsum</p>
+                            <p class="smallish">10.000 views</p>
+                        </div>
+                    </div>
+                    <div id="thumbnail-wrapper" class="flex-row-space">
+                        <img id="thumbnail"
+                            src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Google_Videos_Homepage_Search_Engine_Screenshot.png">
+                        <div id="thumbnail-description" class="flex-col-start">
+                            <p class="thumb-par">Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+                            <p class="smallish">Lorem Ipsum</p>
+                            <p class="smallish">10.000 views</p>
+                        </div>
+                    </div>
+                    <div id="thumbnail-wrapper" class="flex-row-space">
+                        <img id="thumbnail"
+                            src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Google_Videos_Homepage_Search_Engine_Screenshot.png">
+                        <div id="thumbnail-description" class="flex-col-start">
+                            <p class="thumb-par">Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+                            <p class="smallish">Lorem Ipsum</p>
+                            <p class="smallish">10.000 views</p>
+                        </div>
+                    </div>
+                    <div id="thumbnail-wrapper" class="flex-row-space">
+                        <img id="thumbnail"
+                            src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Google_Videos_Homepage_Search_Engine_Screenshot.png">
+                        <div id="thumbnail-description" class="flex-col-start">
+                            <p class="thumb-par">Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+                            <p class="smallish">Lorem Ipsum</p>
+                            <p class="smallish">10.000 views</p>
+                        </div>
+                    </div>
+                    <div id="thumbnail-wrapper" class="flex-row-space">
+                        <img id="thumbnail"
+                            src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Google_Videos_Homepage_Search_Engine_Screenshot.png">
+                        <div id="thumbnail-description" class="flex-col-start">
+                            <p class="thumb-par">Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+                            <p class="smallish">Lorem Ipsum</p>
+                            <p class="smallish">10.000 views</p>
+                        </div>
+                    </div>
+                    <div id="thumbnail-wrapper" class="flex-row-space">
+                        <img id="thumbnail"
+                            src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Google_Videos_Homepage_Search_Engine_Screenshot.png">
+                        <div id="thumbnail-description" class="flex-col-start">
+                            <p class="thumb-par">Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+                            <p class="smallish">Lorem Ipsum</p>
+                            <p class="smallish">10.000 views</p>
+                        </div>
+                    </div>
+                    <div id="thumbnail-wrapper" class="flex-row-space">
+                        <img id="thumbnail"
+                            src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Google_Videos_Homepage_Search_Engine_Screenshot.png">
+                        <div id="thumbnail-description" class="flex-col-start">
+                            <p class="thumb-par">Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+                            <p class="smallish">Lorem Ipsum</p>
+                            <p class="smallish">10.000 views</p>
+                        </div>
+                    </div>
+                    <div id="thumbnail-wrapper" class="flex-row-space">
+                        <img id="thumbnail"
+                            src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Google_Videos_Homepage_Search_Engine_Screenshot.png">
+                        <div id="thumbnail-description" class="flex-col-start">
+                            <p class="thumb-par">Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+                            <p class="smallish">Lorem Ipsum</p>
+                            <p class="smallish">10.000 views</p>
+                        </div>
+                    </div>
+                    <div id="thumbnail-wrapper" class="flex-row-space">
+                        <img id="thumbnail"
+                            src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Google_Videos_Homepage_Search_Engine_Screenshot.png">
+                        <div id="thumbnail-description" class="flex-col-start">
+                            <p class="thumb-par">Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+                            <p class="smallish">Lorem Ipsum</p>
+                            <p class="smallish">10.000 views</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
-    </div>
+    </main>
+    <script src="./toggleButton.js"></script>
 </body>
+
 </html>
